testsuite/poke.pkl/cast-diag-2.pk
/* { dg-do compile } */

type Fun = ()void;

var v = 10 as Fun; /* { dg-error "" } */
